--- a/.tekton/odh-trustyai-service-v2-16-pull-request.yaml
+++ b/.tekton/odh-trustyai-service-v2-16-pull-request.yaml
@@ -339,6 +339,8 @@ spec:
         value: $(params.prefetch-input)
       - name: dev-package-managers
         value: "true"
+      - name: log-level
+        value: "debug"
       runAfter:
       - pnc-cli-build
       taskRef:
