fix(RHOAIENG-38905): Update Netty on gRPC shaded library

--- a/explainability-service/pom.xml
+++ b/explainability-service/pom.xml
@@ -50,7 +50,7 @@
             <artifactId>netty-handler</artifactId>
             <version>4.1.125.Final</version>
             </dependency>
-            
+
             <!-- Force all Netty dependencies to use 4.1.125.Final -->
             <dependency>
                 <groupId>io.netty</groupId>
@@ -116,6 +116,12 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-codec-haproxy</artifactId>
                 <version>4.1.125.Final</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty-shaded</artifactId>
+                <version>1.75.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
