--- a/explainability-service/pom.xml
+++ b/explainability-service/pom.xml
@@ -117,6 +117,11 @@
                 <artifactId>netty-codec-haproxy</artifactId>
                 <version>4.1.125.Final</version>
             </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-netty-shaded</artifactId>
+                <version>1.75.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
   <dependencies>
